--- a/infrend_project/package.json
+++ b/infrend_project/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "bootstrap": "^5.3.3",
+    "express": "^4.19.2",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.0",
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "^17.3.6",
     "@angular/cli": "^17.3.6",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.12.10",
     "jasmine-core": "~5.1.0",
