--- a/infrend_project/package.json
+++ b/infrend_project/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start:client": "ng serve",
-    "start:server": "cd server && ts-node-dev index.ts",
+    "start:server": "cd server/src && ts-node-dev index.ts",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
