--- a/infrend_project/package.json
+++ b/infrend_project/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:client": "ng serve",
+    "start": "ng serve",
     "start:server": "cd server/src && ts-node-dev index.ts",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
