--- a/infrend_project/angular.json
+++ b/infrend_project/angular.json
@@ -64,7 +64,11 @@
               "buildTarget": "infrend_project:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
